attempt to fix zodiac card alignment in deploy

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,10 +1,11 @@
 main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   align-content: flex-start;
   justify-content: center;
   background-size: cover;
   background-repeat: repeat;
-  display: flex;
-  flex-wrap: wrap;
   height: 100%;
   padding: 20px;
   gap: 20px;
